--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="top_headlines">Top Headlines</string>
     <string name="date">DATE</string>
     <string name="imageView_description">image from internet</string>
+    <string name="search">search</string>
     <string-array name="drop_down_array">
         <item>relevancy</item>
         <item>popularity</item>
